<resources>
    <string name="app_name">Lexicon Memoria</string>
    <string name="create_lexicon_title">Create a new lexicon</string>
    <string name="create_lexicon_hint">Enter a name for the lexicon</string>
    <string name="button_create">Create</string>
    <string name="empty_not_saved">Lexicon not created: Blank label</string>
    <string name="placeholder">placeholder</string>
    <string name="placeholder_long">1: a longer version of a placeholder</string>
    <string name="placeholder_title">The Title</string>

    <string name="search_hint">Search dictionary</string>
    <string name="action_search">Search</string>
    <string name="action_add_word">Add word</string>
    <string name="action_searching">searching...</string>
    <string name="card_section_title">Recently added</string>

    <string name="key_merriam_webster_dictionary">f08d5a23-3852-489f-885b-ebd9134c1d00</string>
    <string name="key_merriam_webster_thesaurus">5ff04b8c-85d6-40c1-81a8-ae5480706cf9</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="module_word_list_title">Summary</string>
    <string name="module_word_list_recent">Recently added</string>

    <string name="word_count">%1$d words</string>

    <string name="definition"><b>%1$d: </b> %2$s</string>
</resources>